--- a/app.json
+++ b/app.json
@@ -3,7 +3,12 @@
     "pages/home/home",
     "pages/classification/classification",
     "pages/community/community",
-    "pages/mine/mine"
+    "pages/mine/mine",
+    "pages/test/test",
+    "pages/home/onlive/onlive",
+    "pages/home/raise/raise",
+    "pages/home/live/live",
+    "pages/home/treasure/treasure"
   ],
   "entryPagePath": "pages/classification/classification",
   "window": {
@@ -32,6 +37,10 @@
       {
         "pagePath": "pages/mine/mine",
         "text": "我的"
+      },
+      {
+        "pagePath": "pages/test/test",
+        "text": "test"
       }
     ]
   },
